esphome-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: esphome
  name: esphome
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      volumes:
        - name: esphome-storage
#          nfs:
#            server: mnemosyne.arkane-systems.lan
#            path: "/swarm/harmony/homeassistant/esphome"
      containers:
        - image: esphome/esphome:1.16.2
          name: esphome
          ports:
          - containerPort: 6052
            name: http
          volumeMounts:
            - mountPath: "/config"
              name: esphome-storage
