homeassistant-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
      - name: config
        emptyDir: {}
#      initContainers:
      containers:
      - name: clone
        image: armhf/hello-world
        volumeMounts:
        - name: config
          mountPath: /config                
#        command: ['/bin/sh', '-c']        
#        args: ['apk update && apk add git && git clone https://github.com/expiluis/k8s-homeassistant && mv k8s-homeassistant/config/* /config']
#      containers:
#      - name: homeassistant
#        image: homeassistant/raspberrypi4-homeassistant:2021.3.4
#        ports:
#        - containerPort: 8123
#          name: http
#        volumeMounts:
#        - name: config
#          mountPath: /config
#          readOnly: true
