esphome-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: homeassistant
  labels:
    app: esphome
spec:
  ports:
  - name: http
    port: 6052
    targetPort: http
  selector:
    app: esphome
