homeassistant-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
  namespace: homeassistant
spec:
#  type: NodePort
#  ports:
#  - port: 80
#    targetPort: 8123
#    nodePort: 30123
  ports:
  - name: http
    port: 8123
    targetPort: http
  selector:
    app: homeassistant
