ingress-esphome.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: homeassistant
  labels:
    app.kubernetes.io/instance: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`esphome.192.168.1.143.nip.io`)
      priority: 10
      services:
        - name: esphome
          port: 6052

  tls:
    certResolver: default
    options: {}
